--- a/requirements.txt
+++ b/requirements.txt
@@ -42,5 +42,6 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 uritemplate==4.2.0
+gunicorn==21.2.0
 urllib3==2.5.0
 Werkzeug==3.1.3
